--- a/trunk/android/Euro2012/res/layout/matchdetail.xml
+++ b/trunk/android/Euro2012/res/layout/matchdetail.xml
@@ -39,13 +39,13 @@
             android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
-            android:fadingEdge="none">
+            android:fadingEdge="none"
+            android:background="@drawable/ratiodetail">
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background="@drawable/ratiodetail"
                 android:gravity="center_horizontal"
                 android:orientation="vertical" >
 
@@ -182,8 +182,8 @@
                             android:gravity="right|center_vertical"
                             android:paddingRight="5dip"
                             android:text="2000"
-                            android:textSize="10dip"
-							android:textColor="#333"/>
+                            android:textColor="#333"
+                            android:textSize="10dip" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -209,6 +209,74 @@
                             android:textSize="10dip" />
                     </LinearLayout>
                 </LinearLayout>
+
+                <!-- <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="horizontal"
+                    android:weightSum="5" >
+
+                    <TextView
+                        android:layout_width="0dip"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:gravity="right|center_vertical"
+                        android:text="@string/stadium"
+                        android:textColor="#333"
+                        android:textSize="14dip"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="0dip"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/stadium"
+                        android:layout_width="0dip"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:gravity="left|center_vertical"
+                        android:text="old trafford"
+                        android:textColor="#333"
+                        android:textSize="14dip"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="horizontal"
+                    android:weightSum="5" >
+
+                    <TextView
+                        android:layout_width="0dip"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:gravity="right|center_vertical"
+                        android:text="@string/arbitration"
+                        android:textColor="#333"
+                        android:textSize="14dip"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="0dip"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/referee"
+                        android:layout_width="0dip"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:gravity="left|center_vertical"
+                        android:text="old trafford"
+                        android:textColor="#333"
+                        android:textSize="14dip"
+                        android:textStyle="bold" />
+                </LinearLayout>  -->
 
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -393,70 +461,6 @@
                         android:layout_width="fill_parent"
                         android:layout_height="1px"
                         android:background="#9eb399" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:orientation="horizontal"
-                    android:weightSum="5" >
-
-                    <TextView
-                        android:layout_width="0dip"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:gravity="right|center_vertical"
-                        android:text="@string/stadium"
-                        android:textColor="#333"
-                        android:textSize="18dip" />
-
-                    <LinearLayout
-                        android:layout_width="0dip"
-                        android:layout_height="fill_parent"
-                        android:layout_weight="1" />
-
-                    <TextView
-                        android:id="@+id/stadium"
-                        android:layout_width="0dip"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:gravity="left|center_vertical"
-                        android:text="old trafford"
-                        android:textColor="#333"
-                        android:textSize="18dip" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:orientation="horizontal"
-                    android:weightSum="5" >
-
-                    <TextView
-                        android:layout_width="0dip"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:gravity="right|center_vertical"
-                        android:text="@string/arbitration"
-                        android:textColor="#333"
-                        android:textSize="18dip" />
-
-                    <LinearLayout
-                        android:layout_width="0dip"
-                        android:layout_height="fill_parent"
-                        android:layout_weight="1" />
-
-                    <TextView
-                        android:id="@+id/referee"
-                        android:layout_width="0dip"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:gravity="left|center_vertical"
-                        android:text="old trafford"
-                        android:textColor="#333"
-                        android:textSize="18dip" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
