--- a/trunk/android/Euro2012/res/layout/matchdetail.xml
+++ b/trunk/android/Euro2012/res/layout/matchdetail.xml
@@ -298,7 +298,7 @@
                             android:layout_height="fill_parent"
                             android:layout_weight="4"
                             android:gravity="center_vertical|center_horizontal"
-                            android:text="Tỷ lệ cá cược châu á"
+                            android:text="Tỷ lệ cá cược châu Á"
                             android:textColor="#333" />
 
                         <LinearLayout
@@ -306,7 +306,7 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView
+                        <TextView android:id="@+id/txtbet11"
                             android:layout_width="0dip"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
@@ -319,7 +319,7 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView
+                        <TextView android:id="@+id/txtbet12"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -332,65 +332,7 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView
-                            android:layout_width="0dip"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center_vertical|center_horizontal"
-                            android:text="2.55"
-                            android:textColor="#333" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="1px"
-                        android:background="#9eb399" />
-
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:orientation="horizontal" >
-
-                        <TextView
-                            android:layout_width="0dip"
-                            android:layout_height="fill_parent"
-                            android:layout_weight="4"
-                            android:gravity="center_vertical|center_horizontal"
-                            android:text="Tỷ lệ cá cược châu á"
-                            android:textColor="#333" />
-
-                        <LinearLayout
-                            android:layout_width="1px"
-                            android:layout_height="fill_parent"
-                            android:background="#9eb399" />
-
-                        <TextView
-                            android:layout_width="0dip"
-                            android:layout_height="fill_parent"
-                            android:layout_weight="1"
-                            android:gravity="center_vertical|center_horizontal"
-                            android:text="2.55"
-                            android:textColor="#333" />
-
-                        <LinearLayout
-                            android:layout_width="1px"
-                            android:layout_height="fill_parent"
-                            android:background="#9eb399" />
-
-                        <TextView
-                            android:layout_width="0dip"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center_vertical|center_horizontal"
-                            android:text="2.55"
-                            android:textColor="#333" />
-
-                        <LinearLayout
-                            android:layout_width="1px"
-                            android:layout_height="fill_parent"
-                            android:background="#9eb399" />
-
-                        <TextView
+                        <TextView android:id="@+id/txtbet13"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -414,7 +356,7 @@
                             android:layout_height="fill_parent"
                             android:layout_weight="4"
                             android:gravity="center_vertical|center_horizontal"
-                            android:text="Tỷ lệ cá cược châu á"
+                            android:text="Tỷ lệ cá cược châu Âu"
                             android:textColor="#333" />
 
                         <LinearLayout
@@ -422,7 +364,7 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView
+                        <TextView android:id="@+id/txtbet21"
                             android:layout_width="0dip"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
@@ -435,7 +377,7 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
-                        <TextView
+                        <TextView android:id="@+id/txtbet22"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -448,7 +390,65 @@
                             android:layout_height="fill_parent"
                             android:background="#9eb399" />
 
+                        <TextView android:id="@+id/txtbet23"
+                            android:layout_width="0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical|center_horizontal"
+                            android:text="2.55"
+                            android:textColor="#333" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="1px"
+                        android:background="#9eb399" />
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:orientation="horizontal" >
+
                         <TextView
+                            android:layout_width="0dip"
+                            android:layout_height="fill_parent"
+                            android:layout_weight="4"
+                            android:gravity="center_vertical|center_horizontal"
+                            android:text="Tài xỉu"
+                            android:textColor="#333" />
+
+                        <LinearLayout
+                            android:layout_width="1px"
+                            android:layout_height="fill_parent"
+                            android:background="#9eb399" />
+
+                        <TextView android:id="@+id/txtbet31"
+                            android:layout_width="0dip"
+                            android:layout_height="fill_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical|center_horizontal"
+                            android:text="2.55"
+                            android:textColor="#333" />
+
+                        <LinearLayout
+                            android:layout_width="1px"
+                            android:layout_height="fill_parent"
+                            android:background="#9eb399" />
+
+                        <TextView android:id="@+id/txtbet32"
+                            android:layout_width="0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical|center_horizontal"
+                            android:text="2.55"
+                            android:textColor="#333" />
+
+                        <LinearLayout
+                            android:layout_width="1px"
+                            android:layout_height="fill_parent"
+                            android:background="#9eb399" />
+
+                        <TextView android:id="@+id/txtbet33"
                             android:layout_width="0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
